[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "citari-api"
version = "0.1.0"
description = "MultiTenantBookingManager API (FastAPI + pyodbc, sync)"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "pyodbc>=5.1,<6.0",
    "PyJWT>=2.8,<3.0",
    "bcrypt>=4.1,<5.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_unused_ignores = false
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
